# tree-sitter-rux

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  test.rx  tree-sitter.json
bindings/c/: tree-sitter-flou-parser.pc.in  tree-sitter-tree-sitter-rux.pc.in
bindings/c/tree_sitter/: tree-sitter-flou-parser.h  tree-sitter-tree-sitter-rux.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_flou_parser/: __init__.py  binding.c
bindings/python/tree_sitter_tree_sitter_rux/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFlouParserTests/: TreeSitterFlouParserTests.swift
bindings/swift/TreeSitterTreeSitterRuxTests/: TreeSitterTreeSitterRuxTests.swift
queries/: highlights.scm
queries/rux/: brackets.scm  highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: tokens.txt
