[package]
name = "tree-sitter-flou-parser"
description = "A tree sitter parser for the Flou Programming language."
version = "0.1.0"
authors = ["Mika Aßmus <mika.assmus@gmail.com>"]
license = "PPL"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "flou-parser"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mikatschuh/tree-sitter-flou"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
