[package]
name = "tree-sitter-tree-sitter-rux"
description = "A Tree Sitter Parser for the Rux Programming Language"
version = "0.1.0"
authors = ["Mika <mika.assmus@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tree-sitter-rux"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mikatschuh/tree-sitter-rux"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
